[gd_scene load_steps=12 format=3 uid="uid://bl4dwoaks2ujc"]

[ext_resource type="Texture2D" uid="uid://dr01g5wjxet0t" path="res://Textures/BuildModeBottomBar.png" id="1_dt42w"]
[ext_resource type="Script" path="res://Scripts/BuildModeScript.gd" id="1_vc134"]
[ext_resource type="FontFile" uid="uid://brsai08ijo7q6" path="res://Effects/Fonts/Tiny5/Tiny5-Regular.ttf" id="2_mfhfw"]
[ext_resource type="Texture2D" uid="uid://dcyir6wcdixo7" path="res://Textures/PMAButton.png" id="3_u2v2u"]
[ext_resource type="Texture2D" uid="uid://dujal7abary5t" path="res://Textures/PMAButton_Clicked.png" id="4_2ekde"]
[ext_resource type="Texture2D" uid="uid://cjljtthudt2jk" path="res://Textures/Station Module 1 Button.png" id="6_tc7js"]
[ext_resource type="Texture2D" uid="uid://df0pgtyk0hn5w" path="res://Textures/Station Module 2 Button.png" id="6_xd8th"]
[ext_resource type="Texture2D" uid="uid://c4l77246nbqqj" path="res://Textures/Station Module 1 Button Pressed.png" id="7_q4m7j"]
[ext_resource type="Texture2D" uid="uid://cwuy4o3xb5m0h" path="res://Textures/Station Module 2 Button Pressed.png" id="7_y65af"]

[sub_resource type="FontVariation" id="FontVariation_a85ub"]
base_font = ExtResource("2_mfhfw")

[sub_resource type="ButtonGroup" id="ButtonGroup_1fuwm"]

[node name="BuildModeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 520.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc134")

[node name="TextureRect" type="TextureRect" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dt42w")
expand_mode = 2

[node name="CategoryList" type="Control" parent="BottomPanel"]
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 120.0

[node name="ScrollContainer" type="ScrollContainer" parent="BottomPanel/CategoryList"]
layout_mode = 2
offset_left = 8.0
offset_top = 2.0
offset_right = 152.0
offset_bottom = 106.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomPanel/CategoryList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CouplingButton" type="Button" parent="BottomPanel/CategoryList/ScrollContainer/VBoxContainer" groups=["BuildMenuCatButtons"]]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_a85ub")
toggle_mode = true
button_group = SubResource("ButtonGroup_1fuwm")
text = "Coupling"

[node name="StorageButton" type="Button" parent="BottomPanel/CategoryList/ScrollContainer/VBoxContainer" groups=["BuildMenuCatButtons"]]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_a85ub")
toggle_mode = true
button_group = SubResource("ButtonGroup_1fuwm")
text = "Storage"

[node name="HabitationButton" type="Button" parent="BottomPanel/CategoryList/ScrollContainer/VBoxContainer" groups=["BuildMenuCatButtons"]]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_a85ub")
toggle_mode = true
button_group = SubResource("ButtonGroup_1fuwm")
text = "Habitation"

[node name="ItemsList" type="Control" parent="BottomPanel"]
anchors_preset = 0
offset_left = 192.0
offset_top = 8.0
offset_right = 1136.0
offset_bottom = 120.0

[node name="ScrollContainer" type="ScrollContainer" parent="BottomPanel/ItemsList"]
layout_mode = 0
offset_right = 952.0
offset_bottom = 112.0
vertical_scroll_mode = 0

[node name="Habitation" type="HBoxContainer" parent="BottomPanel/ItemsList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="PioneerButton" type="TextureButton" parent="BottomPanel/ItemsList/ScrollContainer/Habitation"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("6_tc7js")
texture_pressed = ExtResource("7_q4m7j")
stretch_mode = 1

[node name="CollaborationButton" type="TextureButton" parent="BottomPanel/ItemsList/ScrollContainer/Habitation"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("6_xd8th")
texture_pressed = ExtResource("7_y65af")
stretch_mode = 1

[node name="Storage" type="HBoxContainer" parent="BottomPanel/ItemsList/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="Coupling" type="HBoxContainer" parent="BottomPanel/ItemsList/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="PMAButton" type="TextureButton" parent="BottomPanel/ItemsList/ScrollContainer/Coupling"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_u2v2u")
texture_pressed = ExtResource("4_2ekde")
stretch_mode = 1

[node name="buildTimer" type="Timer" parent="BottomPanel"]
wait_time = 5.0
one_shot = true

[node name="BuildModesTabs" type="TabBar" parent="BottomPanel"]
z_index = -1
layout_mode = 0
offset_top = -32.0
offset_right = 272.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("2_mfhfw")
tab_count = 1
tab_0/title = "Move"

[connection signal="pressed" from="BottomPanel/CategoryList/ScrollContainer/VBoxContainer/CouplingButton" to="BottomPanel" method="_on_coupling_button_pressed"]
[connection signal="pressed" from="BottomPanel/CategoryList/ScrollContainer/VBoxContainer/StorageButton" to="BottomPanel" method="_on_storage_button_pressed"]
[connection signal="pressed" from="BottomPanel/CategoryList/ScrollContainer/VBoxContainer/HabitationButton" to="BottomPanel" method="_on_habitation_button_pressed"]
[connection signal="pressed" from="BottomPanel/ItemsList/ScrollContainer/Habitation/PioneerButton" to="BottomPanel" method="_on_pioneer_button_pressed"]
[connection signal="pressed" from="BottomPanel/ItemsList/ScrollContainer/Habitation/CollaborationButton" to="BottomPanel" method="_on_collaboration_button_pressed"]
[connection signal="pressed" from="BottomPanel/ItemsList/ScrollContainer/Coupling/PMAButton" to="BottomPanel" method="_on_pma_button_pressed"]
